--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.116.1",
+    "mcp>=1.13.1",
+    "ncs>=0.1.0",
+    "nest-asyncio>=1.6.0",
     "openai>=1.102.0",
     "pydantic>=2.11.7",
     "python-env>=1.0.0",
